cmake_minimum_required(VERSION 3.1)
project(LeetCode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    3Sum.cpp
    AddBinary.cpp
    AddTwoNumList.cpp
    BalancedBinaryTree.cpp
    BestTimeToBuyandSell.cpp
    BestTimetoBuyandSellStockII.cpp
    BinarySearchTreeIterator.cpp
    BinaryTreeInorderTraversal.cpp
    BinaryTreePreorderTraversal.cpp
    BinaryTreeZigzagLevelOrderTraversal.cpp
    BTLevelOrderTraversal.cpp
    BTLevelOrderTraversal2.cpp
    ClimbingStaris.cpp
    CloneGraph.cpp
    Combination.cpp
    ConstructBTfromInandPost.cpp
    ConstructBTfromPreandInorder.cpp
    ConvertSAtoBST.cpp
    ConvertSLtoBST.cpp
    countAndSay.cpp
    DecodeWays.cpp
    ExcelSheetColumnNumber.cpp
    ExcelSheetColumnTitle.cpp
    FactorialTrailingZeroes.cpp
    FindMinimuminRotatedSortedArray.cpp
    FindPeakElement.cpp
    FlattenBinaryTreetoLinkedList.cpp
    GasStation.cpp
    ImplementStrStr.cpp
    InsertionSortList.cpp
    IntersectionofTwoLinkedLists.cpp
    JumpGame.cpp
    JumpGame2.cpp
    LengthOfLastWord.cpp
    LetterCombinationsofaPhoneNumber.cpp
    LinkedListCycle.cpp
    LinkedListCycleII.cpp
    LongestCommonPrefix.cpp
    LongestPalindrome.cpp
    LongestSubstringWithoutRepeatingCharacters.cpp
    main.cpp
    MajorityElement.cpp
    MaxDepthOfBT.cpp
    MaximumProductSubarray.cpp
    MaxSubArray.cpp
    MergeSortedArray.cpp
    MergeTwoSortedLists.cpp
    MinDepthOfBT.cpp
    MinimumPath.cpp
    MinStack.cpp
    NumberOf1Bits.cpp
    palindromeNumber.cpp
    PalindromePartitioning.cpp
    PascalTriangel.cpp
    PascalTriangle2.cpp
    PathSum.cpp
    PathSum2.cpp
    PlusOne.cpp
    PopulatingNextRightPointersinEachNode.cpp
    PopulatingNextRightPointersinEachNodeII.cpp
    RebuiltBinaryTree.cpp
    RemoveDuplicateSortedArray.cpp
    RemoveDuplicatesSortedList.cpp
    RemoveDuplicatesSortedList2.cpp
    RemoveElements.cpp
    RemoveNthNode.cpp
    ReorderList.cpp
    RestoreIPAddresses.cpp
    ReverseBits.cpp
    ReverseInteger.cpp
    ReverseWordsinaString.cpp
    RomanToInt.cpp
    RotateArray.cpp
    SameTree.cpp
    SingleNumber.cpp
    SingleNumber2.cpp
    SortList.cpp
    StringToInteger.cpp
    Subsets.cpp
    Subsets2.cpp
    SumRootToLeafNum.cpp
    SurroundedRegions.cpp
    SwapNodesinPairs.cpp
    SymmtricTree.cpp
    ThreeSum.cpp
    ThreeSumClosest.cpp
    Triangle.cpp
    TwoSum.cpp
    UniqueBinarySearchTrees.cpp
    UniquePath2.cpp
    UniquePaths.cpp
    ValidateBST.cpp
    ValidPalindrome.cpp
    ValidParentheses.cpp
    ValidSudolu.cpp
    WordBreak.cpp
    WordLadder.cpp
    ZigZagConversion.cpp)

add_executable(LeetCode ${SOURCE_FILES})